Revert "Fix horizontal scrolling of code hints"

--- a/src/styles/brackets_patterns_override.less
+++ b/src/styles/brackets_patterns_override.less
@@ -379,9 +379,6 @@ a:focus {
         box-shadow: 0 3px 9px @bc-shadow;
         border: none;
 
-        // Fixes a problem with codehints that exceed the maximum size resulting in horizental scrollbars.
-        overflow-x: hidden;
-
         .dark & {
             background-color: @dark-bc-menu-bg;
             box-shadow: 0 3px 9px @dark-bc-shadow;
